Add .page-content class to style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -191,6 +191,10 @@ body {
     scroll-behavior: smooth;
 }
 
+.page-content {
+    width: 100%;
+}
+
 /* Header */
 .top-bar { 
     display: flex; 
